Switch to --interactive mode

--- a/x11env-ros-melodic/latest/Dockerfile
+++ b/x11env-ros-melodic/latest/Dockerfile
@@ -3,49 +3,14 @@ FROM ros:melodic-ros-base-bionic
 # XFCE desktop setup taken from https://github.com/mviereck/dockerfile-x11docker-xfce
 RUN apt-get update && apt-mark hold iptables && \
     env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-      dbus-x11 \
-      psmisc \
-      xdg-utils \
-      x11-xserver-utils \
-      x11-utils && \
-    env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-      xfce4 && \
-    env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-      gtk3-engines-xfce \
-      libgtk-3-bin \
       libpulse0 \
-      mousepad \
-      xfce4-notifyd \
-      xfce4-taskmanager \
-      xfce4-terminal && \
-    env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-      xfce4-battery-plugin \
-      xfce4-clipman-plugin \
-      xfce4-cpufreq-plugin \
-      xfce4-cpugraph-plugin \
-      xfce4-diskperf-plugin \
-      xfce4-datetime-plugin \
-      xfce4-fsguard-plugin \
-      xfce4-genmon-plugin \
-      xfce4-indicator-plugin \
-      xfce4-netload-plugin \
-      xfce4-notes-plugin \
-      xfce4-places-plugin \
-      xfce4-sensors-plugin \
-      xfce4-smartbookmark-plugin \
-      xfce4-systemload-plugin \
-      xfce4-timer-plugin \
-      xfce4-verve-plugin \
-      xfce4-weather-plugin \
-      xfce4-whiskermenu-plugin && \
-    env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
       libxv1 \
       mesa-utils \
-      mesa-utils-extra && \
-    sed -i 's%<property name="ThemeName" type="string" value="Xfce"/>%<property name="ThemeName" type="string" value="Raleigh"/>%' /etc/xdg/xfce4/xfconf/xfce-perchannel-xml/xsettings.xml
-
-CMD ["xfce4-terminal"]
+      mesa-utils-extra \
+      va-driver-all
 
 # ros:melodic-ros-base-bionic understandably does not include the full desktop package
 RUN apt-get update && apt-get install -y \
     ros-melodic-desktop-full
+
+CMD ["/bin/bash"]
